hotkey assignment for deleting vertex, face, edge not working properly #35262

Closed
opened 2013-05-08 18:29:09 +02:00 by roger bootsma · 4 comments

%%%--- Windows 64 bit i7 2600k nvidea gforce 560 ---

- blender 2,67, one that worked is blender 2,64 r52555 ---


- in blender 2.67 it seems not to be possible to assign different hotkeys to delete vertex, edge, face respectifily, it automatically assigns the hotkey to all three delete function instead of the just one that was intended. ---


- to reproduce the mistake, you just have enter edit mode press x to delete and try assigning a hotkey to delete vertex by clicking right mouse button on the delete vertex, when opening the delete window again you can see the the hotkey you meant to assign to just delete vertex has been also automatically without your own permission been assigned to also delete edge and delete face.  ---

%%%

%%%--- Windows 64 bit i7 2600k nvidea gforce 560 --- - blender 2,67, one that worked is blender 2,64 r52555 --- - in blender 2.67 it seems not to be possible to assign different hotkeys to delete vertex, edge, face respectifily, it automatically assigns the hotkey to all three delete function instead of the just one that was intended. --- - to reproduce the mistake, you just have enter edit mode press x to delete and try assigning a hotkey to delete vertex by clicking right mouse button on the delete vertex, when opening the delete window again you can see the the hotkey you meant to assign to just delete vertex has been also automatically without your own permission been assigned to also delete edge and delete face. --- %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%It doesn't work for assigning hotkeys to switching between vert/edge/face selection modes either anymore. It did in 2.66 but not in 2.67.%%%

%%%It doesn't work for assigning hotkeys to switching between vert/edge/face selection modes either anymore. It did in 2.66 but not in 2.67.%%%

%%%Fix in svn, thanks for the report.%%%

%%%Fix in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35262
No description provided.