Fix #35262: assiging shortcuts from e.g. delete or selection mode menus did not work anymore. This was due to a bugfix to show missing shortcut keys for e.g. the mesh > vertices > separate menu. Both should work now.